# al4san

./: .zenodo.json  AUTOCOMPLETE.org  CMakeLists.txt  CONTRIBUTING.org  CTestConfig.cmake  ChangeLog  Jenkinsfile  LICENCE.txt  README.md  README.org  READMEDEV.org  al4san__async_8h.html  al4san__async_8h.js  al4san__async_8h__dep__incl.map  al4san__async_8h__dep__incl.md5  al4san__async_8h__incl.map  al4san__async_8h__incl.md5  al4san__async_8h_source.html  al4san__auxiliary_8h.html  al4san__auxiliary_8h.js  al4san__auxiliary_8h__dep__incl.map  al4san__auxiliary_8h__dep__incl.md5  al4san__auxiliary_8h__incl.map  al4san__auxiliary_8h__incl.md5  al4san__auxiliary_8h_source.html  al4san__common_8h.html  al4san__common_8h.js  al4san__common_8h__dep__incl.map  al4san__common_8h__dep__incl.md5  al4san__common_8h__incl.map  al4san__common_8h__incl.md5  al4san__common_8h_source.html  al4san__context_8h.html  al4san__context_8h.js  al4san__context_8h__dep__incl.map  al4san__context_8h__dep__incl.md5  al4san__context_8h__incl.map  al4san__context_8h__incl.md5  al4san__context_8h_source.html  al4san__f77_8c.html  (+214 more)
control/: CMakeLists.txt  al4san_async.h  al4san_auxiliary.h  al4san_common.h  al4san_context.h  al4san_descriptor.h  al4san_f77.c  al4san_f77.h  al4san_f90.f90  altanal_f77.c  altanal_f77.h  altanal_f90.f90  altanalwinthread.c  altanalwinthread.h  async.c  async.h  auxiliary.c  auxiliary.h  common.h  context.c  context.h  control.c  descriptor.c  options.c  task.c
doc/: CMakeLists.txt  config.in
doc/doxygen/: CMakeLists.txt  README.org  conf-dev-quark.dox.in  conf-dev-starpu.dox.in  conf-usr-quark.dox.in  conf-usr-starpu.dox.in  groups-usr.dox  main.dox
doc/orgmode/: CMakeLists.txt  users_guide.org.in  version.org.in
doc/orgmode/chapters/: installing.org  introduction.org  using.org
example/: CMakeLists.txt  Makefile  cholesky.c  cholesky.h
example/ex1/: CMakeLists.txt  Makefile  cholesky.c  cholesky.h
example/ex2/: Make.inc  Makefile  potrf.c  potrf.h
example/ex2/codelets/: codelet_dgemm.c  codelet_dpotrf.c  codelet_dsyrk.c  codelet_dtrsm.c
example/ex3/: CMakeLists.txt  Make.inc  potrf.c  potrf.h  run.sh
example/ex3/codelets/: codelet_dgemm.c  codelet_dpotrf.c  codelet_dsyrk.c  codelet_dtrsm.c
example/gesvp/: Make.inc  Makefile  run.sh
example/gesvp/codelets/: codelets_dsygst_starpu.c
example/gesvp/codelets/al4san/: codelet_dgelqt.c  codelet_dgemm.c  codelet_dgeqrt.c  codelet_dhe2ge.c  codelet_dlacpy.c  codelet_dlacpy1.c  codelet_dlaset.c  codelet_dlatro.c  codelet_dlatro1.c  codelet_dormqr.c  codelet_dplgsy.c  codelet_dpotrf.c  codelet_dsygst.c  codelet_dsymm.c  codelet_dsyr2k.c  codelet_dsyrfb.c  codelet_dsyrk.c  codelet_dtpmqrt.c  (+5 more)
example/gesvp/compute/: First_Stage.c  Second_Stage.c  cham_eig_pdsygst.c  eig_dplgsy.c  eig_dpotrf.c  eig_dsymm.c  eig_dsyr2k.c  eig_dtrmm.c  eig_dtrsm.c  eig_pdsbcpy_t2bl.c  eig_pdsytrd_hb2st.c  eig_pdsytrd_sy2sb.c
example/gesvp/coreblas/: bulge-chasing.h  core_dlarfy.c  core_dsbtype1cb.c  core_dsbtype2cb.c  core_dsbtype3cb.c  core_dtrdalg1.c
example/gesvp/include/: flops.h  marco.h
example/gesvp/timing/: time_dsygv.c  timing.c  timing.h
example/potrf/: CMakeLists.txt  Make.inc  multiplerun.sh  potrf.c  potrf.h
example/potrf/codelets/: codelet_dgemm.c  codelet_dplgsy.c  codelet_dpotrf.c  codelet_dsyrk.c  codelet_dtrsm.c
example/potrf/compute/: dplgsy.c  pdplgsy.c
example/potrf/coreblas/: core_dplgsy.c
example/potrf_cmake/: CMakeLists.txt  Make.inc  Makefile  ecrc-build.sh  ecrc-modules.sh  potrf-collective.c  potrf.c  potrf.h  shaheen-modules.sh  shaheen_build.sh
example/potrf_cmake/codelets/: codelet_dgemm.c  codelet_dplgsy.c  codelet_dpotrf.c  codelet_dsyrk.c  codelet_dtrsm.c
example/potrf_cmake/compute/: dplgsy.c  pdplgsy.c
include/: CMakeLists.txt  al4san.h  altanal.h
include/al4san/: config.h.in  constants.h  fortran.h  runtime.h  struct.h  task.h  timer.h  types.h
include/altanal/: altanal_config.h.in  altanal_constants.h  altanal_fortran.h  altanal_kernels.h  altanal_runtime.h  altanal_simulate.h  altanal_struct.h  altanal_timer.h  altanal_types.h
runtime/: CMakeLists.txt  al4san_runtime.h
runtime/openmp/: CMakeLists.txt
runtime/openmp/control/: openmp_async.c  openmp_context.c  openmp_control.c  openmp_descriptor.c  openmp_options.c  openmp_task.c  openmp_workspace.c  runtime_async.c  runtime_context.c  runtime_control.c  runtime_descriptor.c  runtime_options.c  runtime_task.c  runtime_workspace.c
runtime/openmp/include/: al4san_openmp.h  al4san_runtime.h  openmp_task.h  runtime_task.h
runtime/parsec/: CMakeLists.txt
runtime/parsec/control/: parsec_async.c  parsec_context.c  parsec_control.c  parsec_descriptor.c  parsec_options.c  parsec_task.c  runtime_async.c  runtime_context.c  runtime_control.c  runtime_descriptor.c  runtime_options.c  runtime_profiling.c  runtime_task.c  runtime_zlocality.c  runtime_zprofiling.c
runtime/parsec/include/: al4san_parsec.h  al4san_runtime.h  altanal_runtime.h  parsec_task.h  runtime_task.h
runtime/quark/: CMakeLists.txt
runtime/quark/control/: quark_async.c  quark_context.c  quark_control.c  quark_descriptor.c  quark_options.c  quark_task.c  runtime_async.c  runtime_context.c  runtime_control.c  runtime_options.c  runtime_profiling.c  runtime_task.c  runtime_zlocality.c  runtime_zprofiling.c
runtime/quark/include/: al4san_quark.h  al4san_runtime.h  altanal_runtime.h  quark_task.h  runtime_task.h
runtime/starpu/: CMakeLists.txt
runtime/starpu/control/: runtime_async.c  runtime_context.c  runtime_control.c  runtime_descriptor.c  runtime_options.c  runtime_profiling.c  runtime_task.c  runtime_workspace.c  runtime_zlocality.c  runtime_zprofiling.c  starpu_async.c  starpu_context.c  starpu_control.c  starpu_descriptor.c  starpu_options.c  starpu_task.c  starpu_workspace.c
runtime/starpu/include/: al4san_runtime.h.in  al4san_starpu.h.in  altanal_runtime.h.in  runtime_codelet.h  runtime_codelet_profile.h  runtime_profiling.h  runtime_task.h  runtime_workspace.h  starpu_codelet.h  starpu_task.h  starpu_workspace.h
simucore/: CMakeLists.txt
(+207 files in other folders)
